--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.custom-tooltip {
+  background-color: white;
+  border: 1px solid #D1D5DB;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 12px;
+  color: #374151;
+}
+
+.custom-tooltip .MuiTooltip-arrow {
+  color: white;
+}
