--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
+
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
 .custom-tooltip {
-  background-color: white;
+  background-color: #ffffff; /* Asegúrate de que el fondo sea blanco */
   border: 1px solid #D1D5DB;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 12px;
-  color: #374151;
+  color: #000000; /* Asegúrate de que el texto sea negro */
 }
 
 .custom-tooltip .MuiTooltip-arrow {
-  color: white;
+  color: #ffffff; /* Flecha blanca */
 }
