--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,20 +41,20 @@ body {
 
 
 .menu-container {
-  background-color: #16a34a; /* bg-green-600 */
-  padding: 1.5rem; /* p-6 */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #16a34a !important; /* bg-green-600 */
+  padding: 1.5rem !important; /* p-6 */
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
   transition: transform 0.3s !important; /* transition-transform duration-300 */
-  border-radius: 0 2rem 2rem 0; /* rounded-r-3xl */
+  border-radius: 0 2rem 2rem 0 !important; /* rounded-r-3xl */
 }
 
 .menu-icon-button {
-  color: #ffffff; /* text-white */
-  background-color: #16a34a; /* hover:bg-green-600 */
-  width: 64px;
-  height: 64px;
+  color: #ffffff !important; /* text-white */
+  background-color: #16a34a !important; /* hover:bg-green-600 */
+  width: 64px !important;
+  height: 64px !important;
 }
 
 .menu-logo {
@@ -73,13 +73,13 @@ body {
 }
 
 .menu-fixed-icon-button {
-  position: fixed;
-  top: 1rem; /* top-4 */
-  left: 1rem; /* left-4 */
-  z-index: 50;
-  color: #ffffff; /* text-white */
-  background-color: #16a34a; /* bg-green-600 */
-  border-radius: 50%; /* rounded-full */
-  width: 64px;
-  height: 64px;
+  position: fixed !important;
+  top: 1rem !important; /* top-4 */
+  left: 1rem !important; /* left-4 */
+  z-index: 50 !important;
+  color: #ffffff !important; /* text-white */
+  background-color: #16a34a !important; /* bg-green-600 */
+  border-radius: 50% !important; /* rounded-full */
+  width: 64px !important;
+  height: 64px !important;
 }
